<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TodoApplication</string>
    <string name="action_clear">Clear All</string>
    <string name="action_add">Add</string>
    <string name="add_hint">Add a new item</string>
    <string name="add_button">Add</string>
    <string name="title_activity_edit_item">Edit Item</string>
    <string name="action_settings">Settings</string>
    <string name="edit_item_label">Edit item below:</string>
    <string name="save_button_label">Save</string>
    <string name="date_picker_label">No Due</string>
    <string name="priority_label">Priority:</string>
    <string name="date_picker_button">Due Date:</string>
    <string name="edittext2_label">Todo Item:</string>
    <string name="edit_item_title">Edit Item</string>
    <string name="add_item_title">Add Item</string>
    <string name="reset_button_label">Reset</string>
    <string name="empty_list_label">Click to add a new item</string>
    <string name="due_expired">Expired</string>
    <string name="due_days">{0,choice,0#Due Today|1#Due Tomorrow|1&lt;Due in {0} days}</string>

    <string-array name="priority_array">
        <item>Standard</item>
        <item>High</item>
        <item>Low</item>
    </string-array>
</resources>
