<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="test.shiva.org.todoapplication.fragments.EditItemDialogFragment">

    <TextView
        android:id="@+id/editText2_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="20dp"
        android:text="@string/edittext2_label"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="20dp"
        android:layout_toRightOf="@id/editText2_label"
        android:singleLine="true"/>


    <TextView
        android:id="@+id/due_date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText2"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="10dp"
        android:text="@string/date_picker_button"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <TextView
        android:id="@+id/date_picker_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText2"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="7dp"
        android:layout_toRightOf="@id/due_date_label"
        android:gravity="center_vertical"
        android:text="@string/date_picker_label"/>

    <ImageButton
        android:id="@+id/date_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText2"
        android:layout_toRightOf="@id/date_picker_label"
        android:src="@android:drawable/ic_menu_my_calendar"
        android:text="@string/date_picker_button"/>


    <TextView
        android:id="@+id/priority_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/due_date_label"
        android:layout_marginBottom="20dp"
        android:text="@string/priority_label"
        android:textAppearance="?android:attr/textAppearanceLarge"/>


    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/due_date_label"
        android:layout_toRightOf="@+id/priority_label"
        android:entries="@array/priority_array"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/priority_label"
        android:text="@string/save_button_label"/>

    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/priority_label"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/button2"
        android:text="@string/reset_button_label"/>

</RelativeLayout>
